animator v1 finished?